--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ once_cell = "1"
 open = "5.3"
 openssl = { version = "0.10", features = ["vendored"] }
 regex = "1"
+reqwest = { version = "0.12", features = ["json"] }
+anthropic = "0.0.8"
 rust-embed = "8"
 serde = "1.0"
 serde_json = "1.0"
